Implement Enhanced rmatch Testing Framework with GitHub-safe file management
   ## Enhanced Testing Framework Features
   - JMH-based statistical performance measurement with confidence intervals
   - Multiple matcher types: RMATCH, FASTPATH, FASTPATH_JIT_OPTIMIZED, JAVA_NATIVE
   - Pattern categorization: SIMPLE (22 patterns), COMPLEX (10+ patterns), PATHOLOGICAL
   - Architecture-aware benchmarking with cross-platform normalization
   - Unified data format combining JMH and legacy CSV systems
   - Enhanced GitHub performance graphics and reporting

   ## Smart Benchmark Data Management
   - Exclude large result files (*.txt, *.log, jmh-*.json, macro-*.json) via .gitignore
   - Provide compressed benchmark-samples archive (1.9K) with representative data
   - Enable full local development while preventing GitHub file size limit issues
   - Support CI integration with in-memory results processing

   ## Integration & Compatibility
   - Enhanced benchmark runner: scripts/run_enhanced_benchmarks.sh
   - Make targets: bench-enhanced [quick|standard|full|architecture]
   - Backward compatibility with existing CSV-based performance tracking
   - Java 25 JIT optimization support with compact object headers
   - FastPath engine integration with AhoCorasick prefilter

   Resolves PR #211 intent: modernize performance visualization and GitHub reporting
   while integrating with all system improvements made since the original PR.

   🤖 Generated with [Claude Code](https://claude.ai/code)

   Co-Authored-By: Claude <noreply@anthropic.com>
   EOF